--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
-  <link rel="stylesheet" href="/index.b2d9cf43.css">
-  <script src="/index.4d6bcbeb.js" defer=""></script>
-</head>
-<body>
-  <h1>Hello, world!</h1>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Project</title><link rel="stylesheet" href="index.2118b545.css"><script type="module" src="index.98073bc4.js"></script></head><body> <h1>Hello, world!</h1> </body></html>
