--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,59 @@
   <script type="module" src="./main.js"></script>
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <h1 class="title">Hello, world!</h1>
+  <div class="columns">
+    <div class="column is-four-fifths">is-four-fifths</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-three-quarters">is-three-quarters</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-two-thirds">is-two-thirds</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-three-fifths">is-three-fifths</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-half">is-half</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-two-fifths">is-two-fifths</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-one-third">is-one-third</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-one-quarter">is-one-quarter</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
+  
+  <div class="columns">
+    <div class="column is-one-fifth">is-one-fifth</div>
+    <div class="column">Auto</div>
+    <div class="column">Auto</div>
+  </div>
 </body>
 </html>
