--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project</title>
   <link rel="stylesheet" href="style.scss">
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./main.ts"></script>
 </head>
 <body>
   <h1 class="title">Hello, world!</h1>
